# sliderule-web-client

./: .env.local  .env.prod  .env.test  .gitattributes  .gitignore  CLAUDE.md  CLAUDE_AI_SYSTEM_PROMPT.md  CONTRIBUTING.md  MCP_SERVER_CROSS_CHAT_PLATFORMS.md  MCP_SETUP_GUIDE.md  MCP_WEB_CLIENT.md  MCP_WEB_CLIENT_for_users.md  Makefile  README.md  VITE_VERSION.sh  gen-release-notes.sh  package-lock.json  package.json  playwright.config.mts  playwright.config.ts  publish-gh-release.sh  tsconfig.json
.github/workflows/: playwright.yml
.husky/: pre-commit
.infracost/: pricing.gob
.infracost/terraform_modules/: manifest-1b1ed905d54c18e3dd8828986c14be17.json
cloudformation/: github-oauth.yaml
docs/: jwt-backend-integration.md  mcp_architecture.drawio
keycloak/: Dockerfile  README.md  docker-compose.yml  env.keycloak  realm-export.json
lambda/github-oauth/: handler.py  requirements.txt  test_handler.py
python-client/: github_auth.py
sliderule-mcp-server/: CLOUD_PLAN.md  Dockerfile  pyproject.toml
sliderule-mcp-server/src/sliderule_mcp/: common.py  jwt_verifier.py  server.py  server_remote.py  session_router.py
sliderule-mcp-server/tests/: conftest.py  test_jwt_verifier.py  test_session_router.py
source/witch/nodejs/: package-lock.json
templates/: cloudfront-site.yaml  custom-resource.yaml
terraform/: .terraform.lock.hcl  backend.tf  main.tf  output.tf  variables.tf
terraform/modules/: bucket.tf  cloudfront.tf  mcp_server.tf  providers.tf  route53.tf  vars.tf
tests/: test-1.spec.ts
tests/e2e/: analysis-simple.spec.ts  simple_request.spec.ts
tests/fixtures/: atl06_TestParquetFile_001.parquet  importFile.ts
web-client/: .eslintrc.cjs  .gitignore  README.md  convert-maki-icons.js  fix-unused-vars.js  index.html  package-lock.json  package.json  playwright.config.mts  sliderule.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
web-client/.husky/: pre-commit
web-client/docs/: COGNITO_SETUP.md  LAMBDA_API_SETUP.md
web-client/public/shapefiles/: ATL24_Mask_v5.dbf  ATL24_Mask_v5.shp  ATL24_Mask_v5.shx
web-client/scripts/: build-docs-index.ts
web-client/src/: App.vue  buildDate.js  buildDate.ts  main.ts  runDevDate.js  runDevDate.ts  uploadDate.js  uploadDate.ts
web-client/src/assets/: app.css  docs-index.json
web-client/src/components/: NotFoundComponent.vue  Sr32BitFlag.vue  (+215 more)
www/: index.html  other.html
(+271 files in other folders)
