[project]
name = "sliderule-mcp"
version = "0.6.0"
description = "MCP server bridging MCP clients to the SlideRule web client"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    { name = "SlideRule Earth", email = "support@mail.slideruleearth.io" },
]
keywords = ["mcp", "sliderule", "icesat2", "gedi", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "websockets>=12.0",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://slideruleearth.io"
Repository = "https://github.com/SlideRuleEarth/sliderule-web-client"

[project.scripts]
sliderule-mcp = "sliderule_mcp.server:main"
sliderule-mcp-remote = "sliderule_mcp.server_remote:main"

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["src/sliderule_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
